<resources>
    <string name="app_name">Temperature Cricket</string>
    <string name="instructions_Fahrenheit">Did you know that you can determine the temperature outside by counting the number of chirps the cricket makes?  Just count the number of chirps one makes in 14 seconds and place that number in the box below.</string>
    <string name="hint_chirps_Fahrenheit">Number of chirps in 14 seconds</string>
    <string name="instructions_Celsius">Did you know that you can determine the temperature outside by counting the number of chirps the cricket makes?  Just count the number of chirps one makes in 25 seconds and place that number in the box below.</string>
    <string name="hint_chirps_Celsius">Number of chirps in 25 seconds</string>
    <string name="btn_label">Calculate Temperature</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
</resources>
